Add assumeRole for ec2 so it works with aws batch

--- a/cf/irsa-pipeline-role.yaml
+++ b/cf/irsa-pipeline-role.yaml
@@ -42,6 +42,13 @@ Resources:
                     "${OIDCProvider}:sub": "system:serviceaccount:pipeline-*:deployment-runner"
                   }
                 }
+              },
+              {
+                "Effect": "Allow",
+                "Principal": {
+                  "Service": "ec2.amazonaws.com"
+                },
+                "Action": "sts:AssumeRole"
               }
             ]
           }
