--- a/cf/userpoolclient.yaml
+++ b/cf/userpoolclient.yaml
@@ -31,10 +31,10 @@ Resources:
         - !Sub ["${BaseUrl}/data-management", BaseUrl:
             !If [ isProd,
               !Sub ["https://${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
-              !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
+                - !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
+                - "http://localhost:5000"
           ],
         ]
-        - !If [ isStaging, "http://localhost:5000/data-management"]
 
       AllowedOAuthFlows:
         - 'code'
