add back target type ip annotation

--- a/charts/nodejs/values.yaml
+++ b/charts/nodejs/values.yaml
@@ -35,6 +35,8 @@ serviceAccount:
 ingress:
   tls:
     enabled: true
+  annotations:
+    alb.ingress.kubernetes.io/target-type: ip
 
 livenessProbe:
   path: "/"
