--- a/cf/userpoolclient.yaml
+++ b/cf/userpoolclient.yaml
@@ -32,8 +32,8 @@ Resources:
             !If [ isProd,
               !Sub ["https://${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
                 - !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
-                - "http://localhost:5000"
           ],
+        - !If [ isStaging, "http://localhost:5000/data-management", !Ref: AWS::NoValue ]
         ]
 
       AllowedOAuthFlows:
