--- a/cf/userpoolclient.yaml
+++ b/cf/userpoolclient.yaml
@@ -31,7 +31,7 @@ Resources:
         - !Sub ["${BaseUrl}/data-management", BaseUrl:
             !If [ isProd,
               !Sub ["https://${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
-                - !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
+              !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
           ],
         - !If [ isStaging, "http://localhost:5000/data-management", !Ref: AWS::NoValue ]
         ]
