--- a/cf/userpoolclient.yaml
+++ b/cf/userpoolclient.yaml
@@ -34,7 +34,7 @@ Resources:
               !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
           ],
         ]
-        - !If [ isStaging, "http://localhost:5000/data-management", !Ref: AWS::NoValue ]
+        - !If [ isStaging, "http://localhost:5000/data-management", !Ref: "AWS::NoValue"]
 
       AllowedOAuthFlows:
         - 'code'
