--- a/cf/userpoolclient.yaml
+++ b/cf/userpoolclient.yaml
@@ -44,17 +44,21 @@ Resources:
         - 'openid'
         - 'aws.cognito.signin.user.admin'
         - 'profile'
-      DefaultRedirectURI: !Sub ["${BaseUrl}/data-management", BaseUrl:
+      DefaultRedirectURI: 
+        - !Sub ["${BaseUrl}/data-management", BaseUrl:
             !If [ isProd,
               !Sub ["https://${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
               !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
           ]]
+        - !If [ isStaging, "http://localhost:5000/data-management", !Ref "AWS::NoValue"]
+
       LogoutURLs:
           - !Sub ["${BaseUrl}/data-management", BaseUrl:
             !If [ isProd,
               !Sub ["https://${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]],
               !Sub ["https://ui-${SandboxID}.${DomainName}", DomainName: !Join ["", [ Fn::ImportValue: !Sub "DomainName-${Environment}" ]]]
           ]]
+          - !If [ isStaging, "http://localhost:5000/data-management", !Ref "AWS::NoValue"]
 
       SupportedIdentityProviders:
         - COGNITO
