--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -232,11 +232,11 @@ jobs:
         run: |-
           kubectl apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
 
-      - id: create-flux-namespace
-        name: Attempt to create flux namespace
-        continue-on-error: true
-        run: |-
-          kubectl create namespace flux
+      # - id: create-flux-namespace
+      #   name: Attempt to create flux namespace
+      #   continue-on-error: true
+      #   run: |-
+      #     kubectl create namespace flux
 
       - id: setup-domain
         name: Compile environment-specific domain name
@@ -287,16 +287,16 @@ jobs:
           ACM_CERTIFICATE_ARN: ${{ secrets.ACM_CERTIFICATE_ARN }}
           MONITORING_ENABLED: ${{ steps.platform-monitoring-enabled.outputs.result }}
 
-      - id: create-account-information-configmap
-        name: Create a configmap containing AWS account specific details
-        continue-on-error: false
-        run: |-
-          kubectl create configmap account-config --from-file=infra/config/account-config.yaml -n flux -o yaml --dry-run | kubectl apply -f -
+      # - id: create-account-information-configmap
+      #   name: Create a configmap containing AWS account specific details
+      #   continue-on-error: false
+      #   run: |-
+      #     kubectl create configmap account-config --from-file=infra/config/account-config.yaml -n flux -o yaml --dry-run | kubectl apply -f -
 
-      - id: install-fluxctl
-        name: Install fluxctl
-        run: |-
-          sudo snap install fluxctl --classic
+      # - id: install-fluxctl
+      #   name: Install fluxctl
+      #   run: |-
+      #     sudo snap install fluxctl --classic
 
       - id: install-helm
         name: Install Helm
@@ -392,93 +392,93 @@ jobs:
         env:
           ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
-      - id: install-flux
-        name: Deploy flux
-        run: |-
-          helm repo add fluxcd https://charts.fluxcd.io
-          kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
+      # - id: install-flux
+      #   name: Deploy flux
+      #   run: |-
+      #     helm repo add fluxcd https://charts.fluxcd.io
+      #     kubectl apply -f https://raw.githubusercontent.com/fluxcd/helm-operator/master/deploy/crds.yaml
 
-          FLUX_GIT_READ_ONLY=${{ steps.flux-git-read-only.outputs.result }}
+      #     FLUX_GIT_READ_ONLY=${{ steps.flux-git-read-only.outputs.result }}
 
-          if [[ $FLUX_GIT_READ_ONLY = "false" ]]; then
-            GIT_URL=git@github.com:${{ env.RELEASES_REPOSITORY }}
-          elif [[ $FLUX_GIT_READ_ONLY = "true" ]]; then
-            GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
-          fi
+      #     if [[ $FLUX_GIT_READ_ONLY = "false" ]]; then
+      #       GIT_URL=git@github.com:${{ env.RELEASES_REPOSITORY }}
+      #     elif [[ $FLUX_GIT_READ_ONLY = "true" ]]; then
+      #       GIT_URL=https://github.com/${{ env.RELEASES_REPOSITORY }}
+      #     fi
 
-          helm upgrade flux fluxcd/flux \
-            --set git.url=$GIT_URL \
-            --set git.path="$CLUSTER_ENV" \
-            --set git.label="flux-sync-$CLUSTER_ENV" \
-            --set git.pollInterval="2m" \
-            --set git.timeout="40s" \
-            --set git.readonly=$FLUX_GIT_READ_ONLY \
-            --set syncGarbageCollection.enabled=true \
-            --namespace flux \
-            --install --wait
+      #     helm upgrade flux fluxcd/flux \
+      #       --set git.url=$GIT_URL \
+      #       --set git.path="$CLUSTER_ENV" \
+      #       --set git.label="flux-sync-$CLUSTER_ENV" \
+      #       --set git.pollInterval="2m" \
+      #       --set git.timeout="40s" \
+      #       --set git.readonly=$FLUX_GIT_READ_ONLY \
+      #       --set syncGarbageCollection.enabled=true \
+      #       --namespace flux \
+      #       --install --wait
 
-          helm upgrade helm-operator fluxcd/helm-operator \
-            --set git.ssh.secretName=flux-git-deploy \
-            --set helm.versions=v3 \
-            --set git.pollInterval="2m" \
-            --set git.timeout="40s" \
-            --namespace flux \
-            --install --wait
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+      #     helm upgrade helm-operator fluxcd/helm-operator \
+      #       --set git.ssh.secretName=flux-git-deploy \
+      #       --set helm.versions=v3 \
+      #       --set git.pollInterval="2m" \
+      #       --set git.timeout="40s" \
+      #       --namespace flux \
+      #       --install --wait
+      #   env:
+      #     ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
-      - id: get-public-key
-        name: Get flux SSH deploy key
-        if: steps.flux-git-read-only.outputs.result == 'false'
-        run: |-
-          fluxctl identity --k8s-fwd-ns flux | tee ~/flux.pub
+      # - id: get-public-key
+      #   name: Get flux SSH deploy key
+      #   if: steps.flux-git-read-only.outputs.result == 'false'
+      #   run: |-
+      #     fluxctl identity --k8s-fwd-ns flux | tee ~/flux.pub
 
-      - id: add-key-to-github
-        name: Add Flux deploy key to GitHub repository
-        if: steps.flux-git-read-only.outputs.result == 'false'
-        run: |-
-          # find existing key IDs. save them to a file
-          curl \
-            -H"Authorization: token $API_TOKEN_GITHUB"\
-            https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys 2>/dev/null\
-            | jq '.[] | select(.title | contains(env.CLUSTER_ENV)) | .id' > /tmp/key_ids
+      # - id: add-key-to-github
+      #   name: Add Flux deploy key to GitHub repository
+      #   if: steps.flux-git-read-only.outputs.result == 'false'
+      #   run: |-
+      #     # find existing key IDs. save them to a file
+      #     curl \
+      #       -H"Authorization: token $API_TOKEN_GITHUB"\
+      #       https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys 2>/dev/null\
+      #       | jq '.[] | select(.title | contains(env.CLUSTER_ENV)) | .id' > /tmp/key_ids
 
-          # iterate through them and delete all existing deploy keys
-          cat /tmp/key_ids | \
-            while read _id; do
-              echo "- delete  deploy key: $_id"
-              curl \
-                -X "DELETE"\
-                -H"Authorization: token $API_TOKEN_GITHUB"\
-                https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys/$_id 2>/dev/null
-            done
+      #     # iterate through them and delete all existing deploy keys
+      #     cat /tmp/key_ids | \
+      #       while read _id; do
+      #         echo "- delete  deploy key: $_id"
+      #         curl \
+      #           -X "DELETE"\
+      #           -H"Authorization: token $API_TOKEN_GITHUB"\
+      #           https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys/$_id 2>/dev/null
+      #       done
 
-          # add the keyfile to github
-          echo
-          echo "+ flux deploy key:"
-          echo -n ">> "
-          {
-            curl \
-              -i\
-              -H"Authorization: token $API_TOKEN_GITHUB"\
-              --data @- https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys << EOF
-            {
-              "title" : "Flux CI -- $CLUSTER_ENV -- $(date)",
-              "key" : "$(cat ~/flux.pub)",
-              "read_only" : false
-            }
-          EOF
-          } 2>/dev/null | tee /tmp/create_key_result | head -1
+      #     # add the keyfile to github
+      #     echo
+      #     echo "+ flux deploy key:"
+      #     echo -n ">> "
+      #     {
+      #       curl \
+      #         -i\
+      #         -H"Authorization: token $API_TOKEN_GITHUB"\
+      #         --data @- https://api.github.com/repos/${{ env.RELEASES_REPOSITORY }}/keys << EOF
+      #       {
+      #         "title" : "Flux CI -- $CLUSTER_ENV -- $(date)",
+      #         "key" : "$(cat ~/flux.pub)",
+      #         "read_only" : false
+      #       }
+      #     EOF
+      #     } 2>/dev/null | tee /tmp/create_key_result | head -1
 
-          # check if key was created
-          KEY_CREATED=$(grep 201 /tmp/create_key_result | wc -l | xargs)
-          if [ $KEY_CREATED -eq 0 ]
-          then
-            echo
-            echo Key creation failed. Full response shown below:
-            cat /tmp/create_key_result
-            false
-          fi
+      #     # check if key was created
+      #     KEY_CREATED=$(grep 201 /tmp/create_key_result | wc -l | xargs)
+      #     if [ $KEY_CREATED -eq 0 ]
+      #     then
+      #       echo
+      #       echo Key creation failed. Full response shown below:
+      #       cat /tmp/create_key_result
+      #       false
+      #     fi
 
       - id: deploy-xray-daemon
         name: Deploy AWS X-Ray daemon
