--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -384,14 +384,16 @@ jobs:
           template: 'infra/cf-route53.yaml'
           no-fail-on-empty-changeset: "1"
 
-      - id: flux-git-read-only
-        name: Get Flux mode
-        uses: mikefarah/yq@master
-        with:
-          cmd: yq '.[env(ENVIRONMENT_NAME)].fluxGitReadOnly' 'infra/config/github-environments-config.yaml'
-        env:
-          ENVIRONMENT_NAME: ${{ matrix.environment-name }}
+      # - id: flux-git-read-only
+      #   name: Get Flux mode
+      #   uses: mikefarah/yq@master
+      #   with:
+      #     cmd: yq '.[env(ENVIRONMENT_NAME)].fluxGitReadOnly' 'infra/config/github-environments-config.yaml'
+      #   env:
+      #     ENVIRONMENT_NAME: ${{ matrix.environment-name }}
 
+# Disabled all flux-related changes because flux v1 doesn't seem to be supported anymore, 
+# we have to migrate to v2 asap but until then commenting out should keep this workflow working
       # - id: install-flux
       #   name: Deploy flux
       #   run: |-
