Insert `target-type: ip` annotation back into K8s

--- a/charts/nodejs/templates/ingress.yaml
+++ b/charts/nodejs/templates/ingress.yaml
@@ -29,6 +29,7 @@ metadata:
     alb.ingress.kubernetes.io/healthy-threshold-count: "{{ .Values.loadBalancerHealthCheck.successThreshold }}"
     alb.ingress.kubernetes.io/unhealthy-threshold-count: "{{ .Values.loadBalancerHealthCheck.failureThreshold }}"
     alb.ingress.kubernetes.io/group.name: {{ .Values.kubernetes.env }}
+    alb.ingress.kubernetes.io/target-type: ip
 spec:
   rules:
   - host: {{ template "hostname" . }}
