--- a/infra/config/account-config.yaml
+++ b/infra/config/account-config.yaml
@@ -4,6 +4,7 @@ myAccount:
   region: FILLED_IN_BY_CI
   accountId: FILLED_IN_BY_CI
   acmCertificate: FILLED_IN_BY_CI
+  selfSignedCertificate: FILLED_IN_BY_CI
   datadogEnabled: FILLED_IN_BY_CI
   datadogApiKey: FILLED_IN_BY_CI
   #FILLED IN BY IAC CI
