--- a/charts/nodejs/templates/deployment.yaml
+++ b/charts/nodejs/templates/deployment.yaml
@@ -77,6 +77,11 @@ spec:
         - name: DOMAIN_NAME
           value: {{ .Values.myAccount.domainName | quote }}
 
+{{- if eq .Values.myAccount.selfSignedCertificate "true" }}
+        - name: NODE_TLS_REJECT_UNAUTHORIZED
+          value:  "0"
+{{- end }}
+
         ports:
         - name: "{{ .Values.service.name }}"
           containerPort: {{ .Values.service.internalPort }}
