fix flux install

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -274,7 +274,7 @@ jobs:
       - id: install-fluxctl
         name: Install fluxctl
         run: |-
-          sudo snap install fluxctl --classic
+          sudo wget https://github.com/fluxcd/flux/releases/download/1.25.4/fluxctl_linux_amd64 -O /usr/local/bin/fluxctl && sudo chmod +x /usr/local/bin/fluxctl
 
       - id: install-helm
         name: Install Helm
