job arn is not the job name so the permissions are wrong

--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -241,7 +241,7 @@ Resources:
                   - "batch:TerminateJob"
                   - "batch:CancelJob"
                 Resource:
-                  - !Sub "arn:aws:batch:*:${AWS::AccountId}:job/${Environment}-*"
+                  - !Sub "arn:aws:batch:*:${AWS::AccountId}:job/*"
               - Effect: Allow
                 Action:
                   - "batch:ListJobs"
