--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -397,6 +397,11 @@ jobs:
           template: 'infra/cf-loadbalancer.yaml'
           no-fail-on-empty-changeset: "1"
 
+      # When manually updating Route53 records in production, 
+      # we didn't save the previous values of scp.biomage.net and *.scp.biomage.net.
+      # As a result, this step now fails, complaining that
+      # "the values provided do not match the current values".
+      # We will ask DoIt for help, but until then this step should be disabled.
       # - id: deploy-route53
       #   name: Deploy Route 53 DNS records to ELB
       #   uses: aws-actions/aws-cloudformation-github-deploy@v1
