--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -3,22 +3,82 @@ name: Setup monitoring for a deployment
 on:
   workflow_dispatch:
     inputs:
-      cluster:
+      environment_name:
         type: choice
-        description: Select cluster
+        description: Select the environment name to run the actions on
         options:
-        - staging
-        - production
-        - staging and production
+          - trv
+          - Biomage
+          - all
+        default: all
+      deployment_option:
+        type: choice
+        description: Select the monitoring to configure
+        options:
+          - Datadog
+          - Cloudwatch
+          - all
+        default: Cloudwatch
+      environment_type:
+        type: choice
+        description: Select environment type
+        options:
+          - staging
+          - production
+          - staging and production
         default: staging
 
+# this ensures that only one CI pipeline with the same key
+#  can run at once in order to prevent undefined states
+concurrency: cluster-update-mutex
+
 jobs:
-  setup:
-    name: Check secrets and set up matrix
+  set-environments:
+    name: Set up environment name and environment type for action run
     runs-on: ubuntu-20.04
+    outputs:
+      env-type: ${{ steps.set-env-type.outputs.env-type }}
+      env-name: ${{ steps.set-env-name.outputs.env-name }}
+    steps:
+      - id: set-env-type
+        name: Set up environment type
+        run: |-
+          if [ "${ENVIRONMENT_TYPE}" = "staging" ]; then
+            echo 'env-type=["staging"]' >> $GITHUB_OUTPUT
+          elif [ "${ENVIRONMENT_TYPE}" = "production" ]; then
+            echo 'env-type=["production"]' >> $GITHUB_OUTPUT
+          elif [ "${ENVIRONMENT_TYPE}" = "staging and production" ]; then
+            echo 'env-type=["staging", "production"]' >> $GITHUB_OUTPUT
+          fi
+        env:
+          ENVIRONMENT_TYPE: ${{ github.event.inputs.environment_type }}
+
+      - id: set-env-name
+        name: Set up environment name
+        run: |-
+          if [ "${ENVIRONMENT_NAME}" = "all" ]; then
+            echo 'env-name=["Biomage", "trv"]' >> $GITHUB_OUTPUT
+          elif [ "${ENVIRONMENT_NAME}" = "trv" ]; then
+            echo 'env-name=["trv"]' >> $GITHUB_OUTPUT
+          elif [ "${ENVIRONMENT_NAME}" = "Biomage" ]; then
+            echo 'env-name=["Biomage"]' >> $GITHUB_OUTPUT
+          fi
+        env:
+          ENVIRONMENT_NAME: ${{ github.event.inputs.environment_name }}
+
+  check-secrets:
+    name: Check that sufficient secrets are specified for environment name
+    runs-on: ubuntu-20.04
+    needs: set-environments
+    env:
+      CLUSTER_ENV: ${{ matrix.environment-type }}
     strategy:
       matrix:
-        environment-name: [Biomage]
+        environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
+        environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
+        exclude:
+          - environment-name: trv
+            environment-type: staging
     environment: ${{ matrix.environment-name }}
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -26,7 +86,37 @@ jobs:
       - id: check-secrets
         name: Check if necessary secrets are installed.
         run: |-
-          echo Checking if secrets are defined in the repository.
+          echo Checking if required secrets are defined in the repository.
+
+          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]
+          then
+            echo AWS Access Key ID not defined.
+            ERROR=true
+          fi
+          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]
+          then
+            echo AWS Secret Access Key not defined.
+            ERROR=true
+          fi
+          if [ -z "${{ secrets.API_TOKEN_GITHUB }}" ]
+          then
+            echo GitHub deploy key access token not defined.
+            ERROR=true
+          fi
+
+          if [ ! -z "$ERROR" ]
+          then
+            echo
+            echo This workflow requires some secrets to complete.
+            echo Please make sure they are created by adding/rotating them manually.
+            exit 1
+          fi
+
+      - id: check-datadog-secrets
+        name: Check if necessary Datadog secrets are installed.
+        if: ${{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
+        run: |-
+          echo Checking if Datadog secrets are defined in the repository.
 
           if [ -z "${{ secrets.DATADOG_API_KEY}}" ]
           then
@@ -37,35 +127,26 @@ jobs:
           if [ ! -z "$ERROR" ]
           then
             echo
-            echo This workflow requires some secrets to complete.
-            echo Please make they are created by adding/rotating them manually.
+            echo This workflow requires some Datadog secrets to complete.
+            echo Please make sure they are created by adding/rotating them manually.
             exit 1
           fi
-      - id: set-matrix
-        name: Set up cluster matrix
-        run: |-
-          if [ "${CLUSTER}" = "staging" ]; then
-            echo '::set-output name=matrix::["staging"]'
-          elif [ "${CLUSTER}" = "production" ]; then
-            echo '::set-output name=matrix::["production"]'
-          elif [ "${CLUSTER}" = "staging and production" ]; then
-            echo '::set-output name=matrix::["staging", "production"]'
-          fi
-        env:
-          CLUSTER: ${{ github.event.inputs.cluster }}
 
   deploy-monitoring:
     name: Setup monitoring for deployment
     runs-on: ubuntu-20.04
-    needs: [setup]
+    needs: [set-environments, check-secrets]
     env:
       CLUSTER_ENV: ${{ matrix.environment-type }}
       API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
     strategy:
       max-parallel: 1
       matrix:
-        environment-type: ${{ fromJson(needs.setup.outputs.matrix) }}
-        environment-name: [Biomage]
+        environment-type: ${{ fromJson(needs.set-environments.outputs.env-type) }}
+        environment-name: ${{ fromJson(needs.set-environments.outputs.env-name) }}
+        exclude:
+          - environment-name: trv
+            environment-type: staging
     environment: ${{ matrix.environment-name }}
     steps:
       - id: checkout
@@ -82,17 +163,20 @@ jobs:
 
       - id: add-kubeconfig
         name: Add k8s config file for existing cluster.
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         run: |-
           aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
       - id: install-eksctl
         name: Install eksctl
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         run: |-
           curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
           sudo mv /tmp/eksctl /usr/local/bin
 
       - id: setup-cluster-cloudwatch-logging-policy
         name: Setup permissions required for cluster to log to Cloudwatch
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=${{ matrix.environment-type }}"
@@ -104,10 +188,12 @@ jobs:
       # Setting up log forwarding for pods hosted in EC2 nodes
       - id: create-fluent-bit-namespace
         name: Create namespace for node FluentBit deployment
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         run: kubectl apply -f infra/cluster-logging/node-fluentbit-namespace.yaml
 
       - id: create-service-account-for-node-fluent-bit
         name: Create service account for node FluentBit
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         env:
           LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
         run: |-
@@ -122,6 +208,7 @@ jobs:
 
       - id: deploy-node-fluent-bit
         name: Deploy FluentBit for EC2 nodes
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
@@ -136,6 +223,7 @@ jobs:
       # Setting up log forwarding for pods hosted on Fargate nodes
       - id: attach-pod-execution-role-name
         name: Attach logging policy to pod execution role
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         env:
           LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
         run: |-
@@ -151,6 +239,7 @@ jobs:
 
       - id: deploy-fargate-fluent-bit
         name: Deploy FluentBit config for Fargate pods
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Cloudwatch" }}
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |-
@@ -163,6 +252,7 @@ jobs:
       # Setting up Datadog to watch pod metrics for pods hosted on EC2 and Fargate nodes
       - id: setup-datadog-cluster-agent
         name: Setup Datadog cluster agent
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
         run: |-
           helm repo add datadog https://helm.datadoghq.com
           helm repo update
@@ -174,6 +264,7 @@ jobs:
 
       - id: setup-datadog-sidecar-permissions
         name: Setup Datadog sidecar permissions
+        if: {{ inputs.deployment_option == "all" || inputs.deployment_option == "Datadog" }}
         run: |-
           kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
 
