--- a/cf/rds-subnet-security-group.yaml
+++ b/cf/rds-subnet-security-group.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up RDS Aurora cluster subnet and security groups [managed by github.com/biomage-org/iac]
+Description: Set up RDS Aurora cluster subnet and security groups [managed by github.com/hms-dbmi-cellenics/iac]
 
 Parameters:
   Environment:
