--- a/cf/redis.yaml
+++ b/cf/redis.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up ElastiCache Redis cluster [managed by github.com/biomage-org/iac]
+Description: Set up ElastiCache Redis cluster [managed by github.com/hms-dbmi-cellenics/iac]
 
 Parameters:
   Environment:
