--- a/cf/userpoolclient.yaml
+++ b/cf/userpoolclient.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up SNS topics for Biomage SCP [managed by github.com/biomage-org/iac]
+Description: Set up SNS topics for Biomage SCP [managed by github.com/hms-dbmi-cellenics/iac]
 
 Parameters:
   Environment:
