--- a/infra/cf-state-machine-role.yaml
+++ b/infra/cf-state-machine-role.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up role for state machine executions [managed by github.com/biomage-org/iac]
+Description: Set up role for state machine executions [managed by github.com/hms-dbmi-cellenics/iac]
 
 Parameters:
   Environment:
