--- a/infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml
+++ b/infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Setup policy required for K8s cluster to log to Cloudwatch [managed by github.com/biomage-org/iac]
+Description: Setup policy required for K8s cluster to log to Cloudwatch [managed by github.com/hms-dbmi-cellenics/iac]
 
 Parameters:
   Environment:
